--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .nav {
   width: 100%;
   height: 70px;
-  background-color: blue;
+  background-color: green;
   display: flex;
   justify-content: flex-end;
   align-items: center;
